--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "first-project-brain",
-  "version": "1.0.1",
+  "version": "1.0.3",
   "description": "'Brain Games Project'",
   "bin": {
-    "brain-games": "dist/bin/brain-games.js"
+    "brain-games": "dist/bin/brain-games.js",
+    "brain-even": "dist/bin/brain-even.js"
   },
   "files": [
     "dist"
